# rag-merchant-triage

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  requirements.txt
data/fixtures/: merchant_issues.json
src/: __init__.py  config.py  evaluate.py  ingest.py  retriever.py  triage_agent.py
